[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-mult-agent"
version = "0.1.0"
description = "Explainable crypto market intelligence API foundation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0,<2.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0,<1.0.0",
    "pytest>=8.3.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
